css/main.css
body {
  margin: 0;
  font: normal 75% Arial, Helvetica, sans-serif;
  background-color: #eeeeee;
}

canvas {
  display: block;
  vertical-align: bottom;
}


/*--- fonts ---*/

p,
h1,
h4 {
  font-family: 'Open Sans Condensed', sans-serif;
  color:#555;
  font-weight: 200;
  margin: 0px auto;
  max-width: 90%;
}

p {
  font-size: 16px;
  max-width: 75%;
}

h3 {

  text-transform: lowercase;
  padding: 5px;
}

.name {
  font-weight: bold;
  margin-top: 200px;
  color: #ffffff;
}

.purpleText {
  color:#dac6ec;
}

.largerText {
  color: #ffffff;
  font-size: 25px;
}

.title {
  font-size: 40px;
  text-transform: lowercase;
  font-family: 'Frank Ruhl Libre', serif;
  color: ##555;
  padding-bottom: 10px;
}

/*--- fonts end ---*/

/* ---- splash page container ---- */

div#splash {
  position: relative;
  width: 100%;
  height: 850px;
  background-color: #AD8EC8;
  text-align: center;
}

#splash {
  padding-top: 5%;
  height: 70em;
}

/*--- splash page end ---*/

/*--- navbar ---*/

.navbar {
  background-color: #AD8EC8;
  margin: 0;
  border-radius: 0;
}
/*--- navbar end ---*/

/*--- icons ---*/
.icons li {
  display: inline-block;
  padding-right: 50px;
  color: #ffffff;
}

.icons a {
  color: #ffffff;
}

li a {
  color: #ffffff;
  font-size: 16px;
}

i.fa {
  color: white;
  margin: 15px auto;
}

li a:hover,
li a i:hover {
  color: #dac6ec;
}

.nav-pills {
  padding-top: 10px;
}

.fa {
  padding-right: 10px;
}
/*---icons end---*/

/*Quotes project*/

#quote {
  font-size: 30px;
}

.quote-container, .btn-container {
  display: block;
  height: 215px;
  margin: 0px auto;
  text-align: center;
}

.btn-container {
  height: 50px;
}

button#generateQuote {
  background: #e4e4e4;
  border: #bdbdbd;
  color: #555;
}

button#generateQuote:focus {
outline: 0 !important;
}

#populateText h3 {
  font-size: 20px;
  color: #424242;
}

#tweet {
  margin-top:15px;
}

/*Quotes project*/

/*---Contact---*/
input {
  height: 40px;
  max-width: 30%;
  border-radius: 7px;
  text-align: center;
  font-size: 1em;
  background-color: green;
}

#input-submit {
  border-style: none;
  color:white;
  font-size: 20px;
  text-transform: lowercase;
}
/*---Contact End---*/
footer {
  padding-left: 10px;
  width: 100%;
  background-color: #616161;
}

footer p {
  color: white;
  margin: 0px !important;
}

footer span {
  margin: auto 5px;
  color: #AD8EC8;

}
i.fa.fa-heart {
  padding: 0;
  color: #AD8EC8;
}
/*---media---*/

/*tablet*/
@media only screen and (max-width: 1025px) {
  div#splash {
    height: 1000px;
    padding-top: 5%;
  }

}

@media only screen and (max-width: 736px) {
  div#splash {
    height: 375px;
    padding-top: 5%;
  }
  .name {
    margin-top: 10px;
  }
}

/*mobile landscape*/
@media only screen and (max-width: 700px) {
    div#splash {
      height: 400px;
      padding-top: 5%;
    }

  .name {
    margin-top: 10px;
  }
}

/*mobile*/
@media only screen and (max-width: 425px) {
  div#splash {
    height: 675px;
    padding-top: 5%;
  }

  .name {
    margin-top: 80px;
  }

  div.cp_embed_wrapper {
    max-width: 100%;
  }
}

